kubernetes/beograd/deployment-worker.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: belgrade
spec: 
  replicas: 1
  selector:
    matchLabels: 
      run: belgrade
  template:
    metadata:
      labels:
        run: belgrade
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: belgrade-postgres
              mountPath: /var/lib/postgres/data
        - name: backend
          image: wombat19/cc-project-worker:latest
          ports:
            - containerPort: 8080  # Adjust the port as needed
      volumes:
        - name: belgrade-postgres
          persistentVolumeClaim:
            claimName: belgrade-postgres-pvc
