kubernetes/beograd/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: belgrade
  labels:
    run: belgrade
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http 
  selector:
    run: belgrade
