kubernetes/beograd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: belgrade 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: belgrade
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: belgrade
            port:
              number: 82
